1) UUIDs without '-', 2) setEdge interface method and tests

--- a/test/test.html
+++ b/test/test.html
@@ -16,7 +16,7 @@
   <script src="../lib/atomic.js"></script>
   <script src="../lib/appbase.js"></script>
   <script>mocha.setup('bdd')</script>
-  <!-- <script src="../test/unit/serveraccessmethods.js"></script> -->
+  <script src="../test/unit/serveraccessmethods.js"></script>
   <script src="../test/unit/userinterfacemethods.js"></script>
   <script>mocha.run();</script>
 </body>
