1) interface methods for listening, 2) internal structure for listening

--- a/test/test.html
+++ b/test/test.html
@@ -13,6 +13,7 @@
   <script src="../vendor/chai.js"></script>
   <script src="../bower_components/async/lib/async.js"></script>
   <script src="../bower_components/socket.io-client/socket.io.js"></script>
+  <script src="../lib/amplify.core.js"></script>
   <script src="../lib/atomic.js"></script>
   <script src="../lib/appbase.js"></script>
   <script>mocha.setup('bdd')</script>
