--- a/test/test.html
+++ b/test/test.html
@@ -13,6 +13,7 @@
   <script src="../vendor/chai.js"></script>
   <script src="../bower_components/async/lib/async.js"></script>
   <script src="../lib/appbase.js"></script>
+  <script src="../lib/oauth.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../test/unit/serveraccessmethods.js"></script>
   <script src="../test/unit/userinterfacemethods.js"></script>
