--- a/test/test.html
+++ b/test/test.html
@@ -11,7 +11,7 @@
   <div id="fixtures"></div>
   <script src="../vendor/mocha.js"></script>
   <script src="../vendor/chai.js"></script>
-  <script src="../bower_components/async/lib/async.js"></script>
+  <script src="../vendor/async.js"></script>
   <script src="../lib/appbase.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../test/unit/serveraccessmethods.js"></script>
