--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -11,8 +11,8 @@
   <div id="fixtures"></div>
   <script src="./mocha.js"></script>
   <script src="./chai.js"></script>
-  <script src="./../../../node_modules/async/lib/async.js"></script>
-  <script src="./../../../dist/appbase.min.js"></script>
+  <script src="./async.js"></script>
+  <script src="./../../dist/appbase.min.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="../serveraccessmethods.js"></script>
   <script src="../userinterfacemethods.js"></script>
