--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -18,7 +18,9 @@
       document.write('<script src="./../../dist/appbase.min.js"><\/script>');
     }
   </script>
-  <script>mocha.setup('bdd')</script>
+  <script>
+    mocha.setup({ui: 'bdd', timeout: 5000})
+  </script>
   <script src="../serveraccessmethods.js"></script>
   <script src="../userinterfacemethods.js"></script>
   <script>mocha.run();</script>
